--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -23,6 +23,8 @@
     "Adress": "يبدوا أننا لم ’ نستطع أن نجد ما ’ تبحث عنه. من الممكن",
     "Help": "مساعد و اتصال",
     "Info": "معلومات",
+    "Our_Products":"منتجاتنا",
+
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
     },
