--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -23,6 +23,8 @@
     "Adress": "Av Mohamed 5 N65 Bl5 Porte4",
     "Help": "Soporte",
     "Info": "Info",
+    "Our_Products":"Nuestros productos",
+    
     "Titles": {
         "Heart_Of_Nature": "En pleno corazón de la naturaleza"
     },
