--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -23,6 +23,8 @@
     "Adress": "Av Mohamed 5 N65 Bl5 Porte4",
     "Help": "Support",
     "Info": "Info",
+    "Our_Products":"Nos produits",
+
     "Titles": {
         "Heart_Of_Nature": "Au coeur de la nature"
     },
