--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,7 @@
     "Adress": "Av Mohamed 5 N65 Bl5 Porte4",
     "Help": "Help",
     "Info": "Info",
+    "Our_Products":"Nuestros productos",
 
     "Titles": {
         "Heart_Of_Nature": "In the heart of nature"
