--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -24,6 +24,7 @@
     "Help": "مساعد و اتصال",
     "Info": "معلومات",
     "Our_Products":"منتجاتنا",
+    "Add_To_Cart":"أضف إلى سلة التسوق",
 
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
