--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
     "Help": "Help",
     "Info": "Info",
     "Our_Products":"Nuestros productos",
+    "Add_To_Cart":"Add to Cart",
 
     "Titles": {
         "Heart_Of_Nature": "In the heart of nature"
