--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -24,7 +24,8 @@
     "Help": "Soporte",
     "Info": "Info",
     "Our_Products":"Nuestros productos",
-    
+    "Add_To_Cart":"Añadir a la cesta",
+
     "Titles": {
         "Heart_Of_Nature": "En pleno corazón de la naturaleza"
     },
