--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -24,6 +24,7 @@
     "Help": "Support",
     "Info": "Info",
     "Our_Products":"Nos produits",
+    "Add_To_Cart":"Ajouter à votre panier",
 
     "Titles": {
         "Heart_Of_Nature": "Au coeur de la nature"
