--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -25,6 +25,7 @@
     "Info": "معلومات",
     "Our_Products":"منتجاتنا",
     "Add_To_Cart":"أضف إلى سلة التسوق",
+    "Learn_More":"معرفة المزيد",
 
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
