--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,6 +25,7 @@
     "Info": "Info",
     "Our_Products":"Nuestros productos",
     "Add_To_Cart":"Add to Cart",
+    "Learn_More":"Learn More",
 
     "Titles": {
         "Heart_Of_Nature": "In the heart of nature"
