--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -25,6 +25,7 @@
     "Info": "Info",
     "Our_Products":"Nuestros productos",
     "Add_To_Cart":"Añadir a la cesta",
+    "Learn_More":"Más información",
 
     "Titles": {
         "Heart_Of_Nature": "En pleno corazón de la naturaleza"
