--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -25,6 +25,7 @@
     "Info": "Info",
     "Our_Products":"Nos produits",
     "Add_To_Cart":"Ajouter à votre panier",
+    "Learn_More":"En savoir plus",
 
     "Titles": {
         "Heart_Of_Nature": "Au coeur de la nature"
