--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -23,10 +23,13 @@
     "Adress": "يبدوا أننا لم ’ نستطع أن نجد ما ’ تبحث عنه. من الممكن",
     "Help": "مساعد و اتصال",
     "Info": "معلومات",
-    "Our_Products":"منتجاتنا",
-    "Add_To_Cart":"أضف إلى سلة التسوق",
-    "Learn_More":"معرفة المزيد",
-
+    "Our_Products": "منتجاتنا",
+    "Add_To_Cart": "أضف إلى سلة التسوق",
+    "Learn_More": "معرفة المزيد",
+    "Our_Team": "فريق العمل",
+    "Price": "السعر",
+    "Location":"الموقع",
+    "Duration":"المدة",
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
     },
@@ -83,7 +86,8 @@
         "TitleCours1": "دورة العسل وحبوب اللقاح والعكبر والهلام والشمع",
         "TitleCours": "دورات تربية النحل التي تقدمها شخصيات بارزة في هذا القطاع",
         "TitleTeam": "تعلّم من خبراء رائدين في المجال",
-        "DescriptionCours": "هذه هي مجموعتنا المختارة من دورات تربية النحل، التي يقدمها أفضل المحترفين في تربية النحل مثل فولانيتو XXXXXXXXXX أو منجانيتو XXXXXXXXXX وغيرهم. نحن نقدم مجموعة من الدورات التدريبية للأشخاص الذين يرغبون في البدء كمربي نحل بالإضافة إلى دورات متخصصة لمربي النحل المحترفين، وهو مشروع تدريبي خاص بنا."
+        "DescriptionCours": "هذه هي مجموعتنا المختارة من دورات تربية النحل، التي يقدمها أفضل المحترفين في تربية النحل مثل فولانيتو XXXXXXXXXX أو منجانيتو XXXXXXXXXX وغيرهم. نحن نقدم مجموعة من الدورات التدريبية للأشخاص الذين يرغبون في البدء كمربي نحل بالإضافة إلى دورات متخصصة لمربي النحل المحترفين، وهو مشروع تدريبي خاص بنا.",
+        "Other_Courses": "دورات أخرى"
     },
     "Material": {
         "Title": "المواد التي تهمك"
@@ -95,25 +99,22 @@
         "role": "TestAPICULTOR profesional",
         "description": "TestCriador de reinas profesional dedicado a la producción de material vivo. Trabaja con diferentes razas. Especialista en Buckfast."
     },
-    "cart":{
-        "Datos Personales":{
-            "Title":"البيانات الشخصية",
-            "Name":"الاسم",
-            "FirstName":"اسم العائلة",
-            "Email":"البريد الإلكتروني",
-            "Direction":"العنوان",
-            "Phone":"الهاتف",
-            "paymentMethod":"طريقة الدفع"
-
+    "cart": {
+        "Datos Personales": {
+            "Title": "البيانات الشخصية",
+            "Name": "الاسم",
+            "FirstName": "اسم العائلة",
+            "Email": "البريد الإلكتروني",
+            "Direction": "العنوان",
+            "Phone": "الهاتف",
+            "paymentMethod": "طريقة الدفع"
         },
-        "CartItems":{
-            "Title":"العناصر في عربة التسوق",
-            "Quantity":"الكمية",
-            "Weight":"الوزن",
-            "Price":"ثمن",
-            "Total":"المجموع الواجب دفعه"
-
+        "CartItems": {
+            "Title": "العناصر في عربة التسوق",
+            "Quantity": "الكمية",
+            "Weight": "الوزن",
+            "Price": "ثمن",
+            "Total": "المجموع الواجب دفعه"
         }
-
     }
 }
