--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,10 +23,13 @@
     "Adress": "Av Mohamed 5 N65 Bl5 Porte4",
     "Help": "Help",
     "Info": "Info",
-    "Our_Products":"Nuestros productos",
-    "Add_To_Cart":"Add to Cart",
-    "Learn_More":"Learn More",
-
+    "Our_Products": "Nuestros productos",
+    "Add_To_Cart": "Add to Cart",
+    "Learn_More": "Learn More",
+    "Our_Team": "Our team",
+    "Price": "Price",
+    "Location":"Location",
+    "Duration":"Duration",
     "Titles": {
         "Heart_Of_Nature": "In the heart of nature"
     },
@@ -34,7 +37,6 @@
         "Title": "Home",
         "Parraph": "Le miel de Montagne des ruches Atlassia installées au parc nationale de ifrane, un miel de fleurs variées dumoyen atlas.Récolté entre 1200m et 2600 m d'altitude, sur des forêts majestueuses, des montagnes ou encore des prairies là oùla nature est la plus pure possible."
     },
-
     "About": {
         "Title": "About",
         "AboutTitle": "the pure honeys of",
@@ -43,7 +45,7 @@
             "Region": "The Rabat-Salé-Zemmour-Zaïr region",
             "Located": "  is one of the sixteen regions that make up Morocco. The Rabat-Salé-Zemmour-Za'ir region is located in the northwest of the Kingdom, on the central plateau. Much of it covers the province of Khemisset, as well as the coastal plateau that extends over the wilaya of Rabat-Salé. It is bordered to the north and northeast by the west - Chararda - Beni Hassan, to the west by the Atlantic Ocean, to the east and southeast by the region of Meknes-Tafilalet, and to the south and southwest by the region of Chaouia - Ouardigha extends over an area of 9580 km², i.e. 1.3% of the total area of the country, and includes 3 prefectures and a region."
         },
-        "Contact_Us":{
+        "Contact_Us": {
             "Title": "Contact us"
         },
         "Delivery": {
@@ -84,7 +86,8 @@
         "TitleCours1": "Honey, Pollen, Propolis, Jelly & Wax Course",
         "TitleCours": "Beekeeping courses given by leading figures in the sector",
         "TitleTeam": "Learn from leading industry experts",
-        "DescriptionCours": "This is our selection of beekeeping courses, given by the best professionals in beekeeping such as FolanitoXXXXXXX or menganitoXXXXXXX among others. We offer a range of training for people who want to start as beekeepers as well as specialised courses for professional beekeepers, a training project of our XXXXXXXXXXXX."
+        "DescriptionCours": "This is our selection of beekeeping courses, given by the best professionals in beekeeping such as FolanitoXXXXXXX or menganitoXXXXXXX among others. We offer a range of training for people who want to start as beekeepers as well as specialised courses for professional beekeepers, a training project of our XXXXXXXXXXXX.",
+        "Other_Courses": "Other Courses"
     },
     "Material": {
         "Title": "Materials of your interest"
@@ -96,25 +99,22 @@
         "role": "TestAPICULTOR profesional",
         "description": "TestCriador de reinas profesional dedicado a la producción de material vivo. Trabaja con diferentes razas. Especialista en Buckfast."
     },
-    "cart":{
-        "Datos Personales":{
-            "Title":"Personal Data",
-            "Name":"Name",
-            "FirstName":"First Name",
-            "Email":"Email",
-            "Direction":"Direction",
-            "Phone":"Phone",
-            "paymentMethod":"Method of payment"
-
+    "cart": {
+        "Datos Personales": {
+            "Title": "Personal Data",
+            "Name": "Name",
+            "FirstName": "First Name",
+            "Email": "Email",
+            "Direction": "Direction",
+            "Phone": "Phone",
+            "paymentMethod": "Method of payment"
         },
-        "CartItems":{
-            "Title":"Items in Cart",
-            "Quantity":"quantity",
-            "Weight":"weight",
-            "Price":"price",
-            "Total":"Total a Pagar"
-
+        "CartItems": {
+            "Title": "Items in Cart",
+            "Quantity": "quantity",
+            "Weight": "weight",
+            "Price": "price",
+            "Total": "Total a Pagar"
         }
-
     }
 }
