--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -23,10 +23,13 @@
     "Adress": "Av Mohamed 5 N65 Bl5 Porte4",
     "Help": "Support",
     "Info": "Info",
-    "Our_Products":"Nos produits",
-    "Add_To_Cart":"Ajouter à votre panier",
-    "Learn_More":"En savoir plus",
-
+    "Our_Products": "Nos produits",
+    "Add_To_Cart": "Ajouter à votre panier",
+    "Learn_More": "En savoir plus",
+    "Our_Team": "Notre équipe",
+    "Price": "prix",
+    "Location":"Emplacement",
+    "Duration":"Duration",
     "Titles": {
         "Heart_Of_Nature": "Au coeur de la nature"
     },
@@ -34,7 +37,6 @@
         "Title": "Home",
         "Parraph": "Le miel de Montagne des ruches Atlassia installées au parc nationale de ifrane, un miel de fleurs variées dumoyen atlas.Récolté entre 1200m et 2600 m d'altitude, sur des forêts majestueuses, des montagnes ou encore des prairies là oùla nature est la plus pure possible."
     },
-
     "About": {
         "Title": "A propos de",
         "AboutTitle": "les miels purs du",
@@ -43,7 +45,7 @@
             "Region": "La région de Rabat-Salé-Zemmour-Zaïr",
             "located": " est l'une des seize régions qui composent le Maroc. La région de Rabat-Salé-Zemmour-Zaïr est située au nord-ouest du Royaume, sur le plateau central. Elle couvre en grande partie la province de Khemisset, ainsi que le plateau côtier qui s'étend sur la wilaya de Rabat-Salé. Elle est limitée au nord et au nord-est par l'ouest - Chararda - Beni Hassan, à l'ouest par l'océan Atlantique, à l'est et au sud-est par la région de Meknès-Tafilalet, et au sud et au sud-ouest par la région de Chaouia - Ouardigha s'étend sur une superficie de 9580 km², soit 1,3 % de la superficie totale du pays, et comprend 3 préfectures et une région."
         },
-        "Contact_Us":{
+        "Contact_Us": {
             "Title": "Contactez-nous"
         },
         "Delivery": {
@@ -84,7 +86,8 @@
         "TitleCours1": "Miel, pollen, propolis, gelée et cire Cours",
         "TitleCours": "Cours d'apiculture dispensés par des personnalités du secteur",
         "TitleTeam": "Apprendre auprès d'experts du secteur",
-        "DescriptionCours": "Voici notre sélection de cours d'apiculture, dispensés par les meilleurs professionnels de l'apiculture tels que FolanitoXXXXX ou menganitoXXXXX entre autres. Nous proposons une gamme de formations pour les personnes qui souhaitent se lancer dans l'apiculture ainsi que des cours spécialisés pour les apiculteurs professionnels, un projet de formation de notre XXXXXXXXXXXX."
+        "DescriptionCours": "Voici notre sélection de cours d'apiculture, dispensés par les meilleurs professionnels de l'apiculture tels que FolanitoXXXXX ou menganitoXXXXX entre autres. Nous proposons une gamme de formations pour les personnes qui souhaitent se lancer dans l'apiculture ainsi que des cours spécialisés pour les apiculteurs professionnels, un projet de formation de notre XXXXXXXXXXXX.",
+        "Other_Courses": "Autres cours"
     },
     "Material": {
         "Title": "Matériel d'intérêt"
@@ -96,25 +99,22 @@
         "role": "TestAPICULTOR profesional",
         "description": "TestCriador de reinas profesional dedicado a la producción de material vivo. Trabaja con diferentes razas. Especialista en Buckfast."
     },
-    "Cart":{
-        "PersonalData":{
-            "Title":"Données personnelles",
-            "Name":"Prénom",
-            "FirstName":"Nom",
-            "Email":"Email",
-            "Direction":"Adresse",
-            "Phone":"Téléphone",
-            "paymentMethod":"Mode de payement"
-
+    "Cart": {
+        "PersonalData": {
+            "Title": "Données personnelles",
+            "Name": "Prénom",
+            "FirstName": "Nom",
+            "Email": "Email",
+            "Direction": "Adresse",
+            "Phone": "Téléphone",
+            "paymentMethod": "Mode de payement"
         },
-        "CartItems":{
-            "Title":"Articles dans le panier",
-            "Quantity":"Quantité",
-            "Weight":"Poids",
-            "Price":"Prix",
-            "Total":"Total á Payer"
-
+        "CartItems": {
+            "Title": "Articles dans le panier",
+            "Quantity": "Quantité",
+            "Weight": "Poids",
+            "Price": "Prix",
+            "Total": "Total á Payer"
         }
-
     }
 }
