--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -100,6 +100,7 @@
         "description": "TestCriador de reinas profesional dedicado a la producción de material vivo. Trabaja con diferentes razas. Especialista en Buckfast."
     },
     "cart": {
+        "Title": "سلة التسوق",
         "Datos Personales": {
             "Title": "البيانات الشخصية",
             "Name": "الاسم",
