--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -100,6 +100,7 @@
         "description": "TestCriador de reinas profesional dedicado a la producción de material vivo. Trabaja con diferentes razas. Especialista en Buckfast."
     },
     "cart": {
+        "Title": "Cart",
         "Datos Personales": {
             "Title": "Personal Data",
             "Name": "Name",
