--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -30,6 +30,7 @@
     "Price": "السعر",
     "Location":"الموقع",
     "Duration":"المدة",
+    "Confirmation":"التأكيد",
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
     },
