--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -30,6 +30,7 @@
     "Price": "Precio",
     "Location":"Ubicación",
     "Duration":"Duración",
+    "Confirmation":"Confirmación",
     "Titles": {
         "Heart_Of_Nature": "En pleno corazón de la naturaleza"
     },
