--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -30,6 +30,7 @@
     "Price": "prix",
     "Location":"Emplacement",
     "Duration":"Duration",
+    "Confirmation":"Confirmation",
     "Titles": {
         "Heart_Of_Nature": "Au coeur de la nature"
     },
