--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,12 +28,12 @@
     "Learn_More": "Learn More",
     "Our_Team": "Our team",
     "Price": "Price",
-    "Location":"Location",
-    "Duration":"Duration",
-    "Confirmation":"Confirmation",
-    "Next":"Next",
-    "Continue":"Continue",
-    "Finish":"Finalizar",
+    "Location": "Location",
+    "Duration": "Duration",
+    "Confirmation": "Confirmation",
+    "Next": "Next",
+    "Continue": "Continue",
+    "Finish": "Finalizar",
     "Titles": {
         "Heart_Of_Nature": "In the heart of nature"
     },
@@ -104,7 +104,6 @@
         "description": "TestCriador de reinas profesional dedicado a la producción de material vivo. Trabaja con diferentes razas. Especialista en Buckfast."
     },
     "cart": {
-       
         "Datos Personales": {
             "Title": "Personal Data",
             "Name": "Name",
@@ -113,8 +112,8 @@
             "Direction": "Direction",
             "Phone": "Phone",
             "paymentMethod": "Method of payment",
-            "Cash_On_Delivery":"Cash on Delivery",
-            "Card":"Card"
+            "Cash_On_Delivery": "Cash on Delivery",
+            "Card": "Card"
         },
         "CartItems": {
             "Title": "Items in Cart",
@@ -122,9 +121,17 @@
             "Weight": "weight",
             "Price": "price",
             "Total": "Total a Pagar"
-           
         },
         "Title": "Cart",
-        "paymentMethodOption":"Select a payment method"
+        "paymentMethodOption": "Select a payment method"
+    },
+    "Notices": {
+        "Name_Is_Required": "Name is required",
+        "FirstName_Is_Required": "First Name is required",
+        "Address_Is_Required": " Address is required",
+        "Email_Is_Required": "Email is required",
+        "Email_Valid_Format": "Email must have a valid format",
+        "Phone_Is_Required": "Phone is required",
+        "Phone_Valid_Format": "Phone must have a valid format"
     }
 }
