--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,8 @@
     "Next": "Next",
     "Continue": "Continue",
     "Finish": "Finalizar",
+    "Pay":"Pay",
+    "Validate":"Validate",
     "Titles": {
         "Heart_Of_Nature": "In the heart of nature"
     },
