--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -34,6 +34,8 @@
     "Next": "Suivant",
     "Continue": "Continuer",
     "Finish": "Terminer",
+    "Pay": "Payer",
+    "Validate": "Valider",
     "Titles": {
         "Heart_Of_Nature": "Au coeur de la nature"
     },
