--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -34,6 +34,8 @@
     "Next": "التالي",
     "Continue": "تابع",
     "Finish": "النهاية",
+    "Pay":"الدفع",
+    "Validate":"التحقق",
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
     },
