--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -34,6 +34,8 @@
     "Next": "Siguiente",
     "Continue": "Continuar",
     "Finish": "Finalizar",
+    "Pay":"Pagar",
+    "Validate":"Validar",
     "Titles": {
         "Heart_Of_Nature": "En pleno corazón de la naturaleza"
     },
