--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -38,6 +38,7 @@
     "Pay": "الدفع",
     "Validate": "التحقق",
     "Similar_Product": "منتجات مماثلة",
+    "See_Our_Products":"انظر منتجاتنا",
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
     },
