--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
     "Pay": "Pay",
     "Validate": "Validate",
     "Similar_Product": "Similar Product",
+    "See_Our_Products":"see our products",
     "Titles": {
         "Heart_Of_Nature": "In the heart of nature"
     },
