--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -37,7 +37,8 @@
     "Finish": "Finalizar",
     "Pay": "Pagar",
     "Validate": "Validar",
-    "Similar_Product": "Product Similar",
+    "Similar_Product": "productos Similares",
+    "See_Our_Products":"Ver nuestros productos",
     "Titles": {
         "Heart_Of_Nature": "En pleno corazón de la naturaleza"
     },
