--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -38,6 +38,7 @@
     "Pay": "Payer",
     "Validate": "Valider",
     "Similar_Product": "Produit Similaire",
+    "See_Our_Products":"Voir nos produits",
     "Titles": {
         "Heart_Of_Nature": "Au coeur de la nature"
     },
